--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>uiBlanc: Universal user interface</title>
+    <style</style>
+  </head>
+  <body>
+    <h1>Hello!</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </body>
+</html>
