--- a/index.html
+++ b/index.html
@@ -9,4 +9,10 @@
     <h1>Hello!</h1>
     <p>Lorem ipsum dolor sit amet.</p>
   </body>
+  <script>
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'G-M732GLLZWJ', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
 </html>
