--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </body>
   <script>
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'G-M732GLLZWJ', 'auto');
+  ga('create', 'UA-119388282-1', 'auto');
   ga('send', 'pageview');
   </script>
   <script async src='https://www.google-analytics.com/analytics.js'></script>
