--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
     <meta charset="utf-8">
     <title>uiBlanc: Universal user interface</title>
     <style</style>
   </head>
+  
   <body>
     <h1>Hello!</h1>
     <p>Lorem ipsum dolor sit amet.</p>
   </body>
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119388282-1"></script>
   <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-119388282-1', 'auto');
-  ga('send', 'pageview');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119388282-1');
   </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+
 </html>
