--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
   <head>
     <meta charset="utf-8">
     <title>uiBlanc: Universal user interface</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <style</style>
   </head>
-  
+
   <body>
     <h1>Hello!</h1>
     <p>Lorem ipsum dolor sit amet.</p>
   </body>
-  
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119388282-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
