--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>uiBlanc: Hello!</title>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <style</style>
   </head>
 
