--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    <h1>Hello!</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h1 class="h1-style">Hello!</h1>
+    <p class="p-style">Lorem ipsum dolor sit amet.</p>
   </body>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119388282-1"></script>
