--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <h1>Hello!</h1>
     <p>Lorem ipsum dolor sit amet.</p>
+    <p>Test</p>
   </body>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119388282-1"></script>
