--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,300;0,800;1,300;1,800&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <h1>Hello!</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Test</p>
+    <div class="logo">
+      <img src="/assets/logo.png" alt="uiBlanc Logo">
+    </div>
+    <div class="center minH">
+      <h1>Universal User Interface</h1>
+      <p>Currently we are preparing for you the digital goods. Stay close.</p>
+    </div>
+    <p class="copy">Copyright &copy; 2021 uiBlanc. Send a message at <a href="mailto:hello@uiblanc.com">hello@uiblanc.com.</a></p>
   </body>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119388282-1"></script>
