--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
   <head>
     <meta charset="utf-8">
     <title>uiBlanc: Hello!</title>
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,300;0,800;1,300;1,800&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <div class="logo">
-      <img src="/assets/logo.png" alt="uiBlanc Logo">
+    <div class="mylogo">
     </div>
-    <div class="center minH">
+    <div class="center">
       <h1>Universal User Interface</h1>
       <p>Currently we are preparing for you the digital goods. Stay close.</p>
     </div>
