--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>uiBlanc: Hello!</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,300;0,800;1,300;1,800&display=swap" rel="stylesheet">
   </head>
