--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="center">
       <h1>Universal User Interface</h1>
-      <p>Currently we are preparing for you the digital goods. Stay close.</p>
+      <p>We are preparing for you the digital goods. Stay close.</p>
     </div>
     <p class="copy">Copyright &copy; 2021 uiBlanc. Send a message at <a href="mailto:hello@uiblanc.com">hello@uiblanc.com.</a></p>
   </body>
