--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="message">
       <h1>Universal User Interface</h1>
-      <p>We are preparing for you the digital goods. Stay close.</p>
+      <p>We are preparing the digital goods. Stay close.</p>
     </div>
   </div>
   <footer class="footer">
